compiler/weave_syntax/tests/data/syntax/Namespace.error
error: Unexpected tokens
        --> <source>:82:17
         |
      82 |                 return self._length;
         |                 ^^^^^^^^^^^^^^^^^^^^
error: Expected '[token:identifier]'
        --> <source>:109:13
         |
     109 |             );
         |             ^
